--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "socket.io": "^1.4.8",
+    "socket.io-client": "^1.4.8",
     "webpack": "^1.13.1"
   },
   "devDependencies": {},
